--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+	<meta charset="utf-8">
 	<title>gitE</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 
